# rosetta_launch

./: .pre-commit-config.yaml  .yamllint.yaml  LICENSE  README.md  sync.py
donatello/: package.xml  setup.cfg  setup.py
donatello/config/: alt_params.yaml  params.yaml  sub_params.yaml
donatello/donatello/: donatello_node.py  five_seconds.py  manual_launch.py
donatello/launch/: 01-single.launch.py  02-param.launch.py  03-params.launch.py  04-command-params.launch.py  05-arg.launch.py  06a-substitutions.launch.py  06b-substitutions.launch.py  06c-substitutions.launch.py  07-inclusive.launch.py  08-conditional.launch.py  09-dynamic-filename.launch.py  10-required.launch.py  10a-required.launch.py  11-recursion.launch.py  12-recursion.launch.py  12-repetition.launch.py
donatello/launch/python/: 01-single.launch.py  02-param.launch.py  05-arg.launch.py  06a-substitutions.launch.py  06b-substitutions.launch.py  07-inclusive.launch.py  08-conditional.launch.py  09-dynamic-filename.launch.py  10b-required.launch.py
donatello/launch/xml/: 01-single.xml  02-param.xml  03-params.xml  04-command-params.xml  05-arg.xml  06a-substitutions.xml  06c-substitutions.xml  (+5 more)
raphael/: CMakeLists.txt  package.xml
raphael/config/: alt_params.yaml  params.yaml  sub_params.yaml
raphael/launch/: 01-single.launch  02-param.launch  03-params.launch  04-command-params.launch  05-arg.launch  06-substitutions.launch  07-inclusive.launch  08-conditional.launch  09-dynamic-filename.launch  10-required.launch  11-recursion.launch  12-recursion.launch
raphael/scripts/: five_seconds  manual_launch  raphael_node
(+12 files in other folders)
