<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>donatello</name>
  <version>0.0.0</version>
  <description>ROS 2 Launch example code for rosetta_launch</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>urdf_tutorial</depend>
  <depend>xacro</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
