<?xml version="1.0"?>
<package format="2">
  <name>raphael</name>
  <version>0.0.0</version>
  <description>ROS 1 Launch example code for rosetta_launch</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>robot_state_publisher</depend>
  <depend>rospy</depend>
  <depend>urdf_tutorial</depend>
  <depend>xacro</depend>
</package>
